# depth-cam-stream-codec

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: color_frame_adapter.yaml  decoder_pipeline.yaml  encoder_pipeline.yaml  realsense_color.yaml  realsense_depth.yaml  realsense_pipeline.yaml
docs/: configuration.md  usage.md
include/depth_cam_stream_codec/: depth_cam.hpp  depth_cam_receiver.hpp  depth_cam_stream_codec.hpp
include/depth_cam_stream_codec/camera/: realsense_color_capture.hpp  realsense_color_config.hpp  realsense_depth_capture.hpp  realsense_depth_config.hpp  realsense_pipeline.hpp  realsense_pipeline_config.hpp
include/depth_cam_stream_codec/codec/: compressed_color_frame.hpp  compressed_depth_frame.hpp  h264_color_encoder.hpp  h264_encoder_config.hpp  rvl_depth_encoder.hpp
include/depth_cam_stream_codec/common/: aligned_frame.hpp  color_frame.hpp  depth_frame.hpp  frame_buffers.hpp  h264_color_frame.hpp  latest_buffer.hpp  rvl_depth_frame.hpp
include/depth_cam_stream_codec/config/: color_frame_adapter_yaml.hpp  decoder_pipeline_yaml.hpp  encoder_pipeline_yaml.hpp  realsense_color_yaml.hpp  realsense_depth_yaml.hpp  realsense_pipeline_yaml.hpp
include/depth_cam_stream_codec/decoder/: decoder_config.hpp  decoder_pipeline.hpp  h264_color_decoder.hpp  rvl_depth_decoder.hpp
include/depth_cam_stream_codec/encoder/: encoder_config.hpp  encoder_pipeline.hpp  encoder_pipeline_config.hpp  h264_color_encoder.hpp  rvl_depth_encoder.hpp
include/depth_cam_stream_codec/ros2/: color_frame_adapter.hpp  color_frame_adapter_config.hpp  color_frame_adapter_node.hpp  compressed_color_frame_adapter.hpp  compressed_depth_frame_adapter.hpp  depth_frame_adapter.hpp  h264_color_frame_adapter.hpp  rvl_depth_frame_adapter.hpp
include/depth_cam_stream_codec/stream/: compressed_stream_pipeline.hpp
msg/: CompressedColorFrame.msg  CompressedDepthFrame.msg
scripts/: run_rx.sh  run_tx.sh
src/: depth_cam.cpp  depth_cam_receiver.cpp  depth_cam_stream_codec.cpp
src/camera/: realsense_color_capture.cpp  realsense_color_config.cpp  realsense_depth_capture.cpp  realsense_depth_config.cpp  realsense_pipeline.cpp  realsense_pipeline_config.cpp
src/codec/: h264_color_encoder.cpp  rvl_depth_encoder.cpp
src/config/: color_frame_adapter_yaml.cpp  decoder_pipeline_yaml.cpp  encoder_pipeline_yaml.cpp  realsense_color_yaml.cpp  realsense_depth_yaml.cpp  realsense_pipeline_yaml.cpp
src/decoder/: decoder_pipeline.cpp  h264_color_decoder.cpp  rvl_depth_decoder.cpp
src/encoder/: encoder_pipeline.cpp  h264_color_encoder.cpp  rvl_depth_encoder.cpp
src/ros2/: color_frame_adapter.cpp  color_frame_adapter_config.cpp  color_frame_adapter_node.cpp  compressed_color_frame_adapter.cpp  compressed_depth_frame_adapter.cpp  decoder_node.cpp  depth_frame_adapter.cpp  encoder_node.cpp  h264_color_frame_adapter.cpp  rvl_depth_frame_adapter.cpp
src/stream/: compressed_stream_pipeline.cpp
test/: te-1.cpp  te-2.cpp  te-3.cpp  te-4.cpp  te-5.cpp  te-6.cpp
