<?xml version="1.0"?>
<package format="3">
  <name>depth_cam_stream_codec</name>
  <version>0.1.0</version>
  <description>RealSense depth and color stream codec with RVL and H.264</description>
  <maintainer email="parkhy@kist.re.kr">parkhy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
