<?xml version="1.0"?>
<package format="3">
  <name>depth_cam_stream_codec</name>
  <version>0.1.0</version>
  <description>RealSense depth and color stream codec with RVL and H.264</description>
  <maintainer email="parkhy@kist.re.kr">parkhy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>librealsense2</depend>
  <depend>yaml-cpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
